Process Hacker

2.20
 * NEW/IMPROVED:
   * Added column selection for handle list
   * Added CPU column to threads list
   * Implemented Properties button for Thread handles
   * Set descending sort as the default for most numeric columns
   * Extended header context menu
   * Removed tooltip text truncation
   * Updated ExtendedTools plugin:
     * Added Firewall Status column
   * Improved cycle-based CPU usage calculation
 * FIXED:
   * Fixed file name resolution bug
   * Save settings on shutdown/logoff
   * Fixed state highlighting bug
   * Fixed command line propagation for -elevate
   * Fixed tree list mouse wheel handling

2.19
 * NEW/IMPROVED:
   * Added cycle-based CPU usage for Windows 7
   * Added Show CPU Below 0.01
   * Added OS Context column
   * Rewrote graph drawing code for improved performance
   * Optimized retrieval of cycle time and private working set 
     information for Windows 7
   * Added Open File Location to process context menu and 
     reorganized some items
   * Added checkboxes to Terminator
 * FIXED:
   * Crash when sorting by Time Stamp
   * GDI handle leak in drag selection

2.18
 * NEW/IMPROVED:
   * Completely rewritten tree list control:
     * Process Name column is now fixed to the left
     * Tooltips for column headers
     * Improved performance
     * Bug fixes
   * Added more process tree list columns
   * Added Time stamp column to network list
   * Date/time display is now swapped (so time is shown before 
     date)
   * Added W3 terminator test
   * Added DotNetTools plugin
   * Updated ExtendedServices plugin:
     * Disabled editing of required privileges for drivers
   * Updated ExtendedTools plugin:
     * Added ETW columns for processes and network connections
   * Updated OnlineChecks plugin:
     * Added Comodo Instant Malware Analysis
   * Updated WindowExplorer plugin:
     * Fixed hook bugs
 * FIXED:
   * Fixed Run As This User
   * Verification Status sorting

2.17
 * NEW/IMPROVED: